tests/semantic_errors/invalid_color.draw
RECT(100, 140, 220, 90) COLOR cyan WIDTH 3 FILL green;
